--- a/css/index-style.css
+++ b/css/index-style.css
@@ -102,11 +102,13 @@ main .right {
 main .right a {
 	border-bottom: 1px solid transparent;
 }
-main .right a:hover {
+main .right li {
+	list-style: none;
 	display: inline-block;
+}
+main .right a:hover {
 	filter: invert(0) sepia(1) saturate(1) hue-rotate(0deg) brightness(0.2);
 	border-bottom: 1px solid black;
-	text-align: center;
 }
 main .right ul li + li {
 	margin-left: 1rem;
