--- a/css/footer.css
+++ b/css/footer.css
@@ -4,12 +4,13 @@ footer {
 	font-size: 1rem;
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr;
-	grid-template-rows: 1fr 1fr 1fr;
+	grid-template-rows: auto 1fr 1fr;
 	grid-template-areas:
 		"logo logo logo logo"
 		"contact-us nav-container nav-container nav-container"
 		"social-media nav-container nav-container nav-container";
-	padding: 2rem 3rem;
+	padding: 7rem 3rem;
+	margin-top: 15rem;
 	gap: 1rem;
 }
 /* LOGO */
