--- a/css/footer.css
+++ b/css/footer.css
@@ -11,6 +11,7 @@ footer {
 		"social-media nav-container nav-container nav-container";
 	padding: 7rem 3rem;
 	margin-top: 15rem;
+	padding-left: 10rem;
 	gap: 1rem;
 }
 /* LOGO */
