--- a/css/nav.css
+++ b/css/nav.css
@@ -2,12 +2,13 @@ header {
 	position: relative;
 	top: 0;
 	left: 0;
-	width: 100%;
+	max-width: 1920px;
 	z-index: 2;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 	padding: 1rem 0;
+	margin: 0 auto;
 }
 header img {
 	margin-left: 4rem;
@@ -39,4 +40,7 @@ header li a:hover,
 header img:hover {
 	text-decoration: underline;
 	opacity: 0.85;
+}
+header nav ul {
+	display: flex;
 }
