--- a/css/blog-post.css
+++ b/css/blog-post.css
@@ -49,7 +49,9 @@ main aside section a:hover {
 	text-decoration: underline;
 }
 main aside section img {
-	vertical-align: middle;
+	position: relative;
+	top: 24px;
+	/* vertical-align: middle; */
 }
 .popular-articles {
 	max-width: 1000px;
