--- a/css/blog-post.css
+++ b/css/blog-post.css
@@ -26,7 +26,7 @@ main figure img {
 
 main figure figcaption {
 	font-size: 1rem;
-	opacity: 0.5;
+	opacity: 0.6;
 	margin-bottom: 4rem;
 }
 
@@ -38,7 +38,6 @@ main article p {
 main aside section {
 	position: relative;
 	right: 30px;
-	margin-top: 5rem;
 }
 
 main aside section a {
@@ -54,19 +53,18 @@ main aside section a:hover {
 main aside section img {
 	position: relative;
 	top: 24px;
-	/* vertical-align: middle; */
 }
 
 .popular-articles {
 	max-width: 1000px;
 	margin: 0 auto;
 	margin-top: 8rem;
-	/* border-top: 2px solid rgb(223, 223, 223); */
 }
-
-.popular-articles h2 {
+.popular-articles img {
+	margin-top: 2rem;
+}
+.popular-articles h3 {
 	font-size: 1.5rem;
-	margin: 2rem 0;
 }
 
 .popular-articles ul {
