--- a/css/blog.css
+++ b/css/blog.css
@@ -1,10 +1,10 @@
 main {
 	display: grid;
-	grid-template-columns: 30% 30% 30%;
+	grid-template-columns: auto auto auto;
 	max-width: 1440px;
 	margin: 0 auto;
 	justify-items: center;
-	gap: 3rem;
+	gap: 1rem;
 }
 
 main h1 {
@@ -31,7 +31,6 @@ main section h2 {
 main section p {
 	font-size: 1rem;
 	color: #000000;
-
 	opacity: 0.6;
 }
 
