--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;500;700;800&family=Open+Sans:wght@300;400;700&display=swap');
 
 * {
-	/* font-family: 'Open Sans', sans-serif; */
+	font-family: 'Open Sans', sans-serif;
 }
 
 body {
-	/* font-family: var(--body-font); */
+	font-family: var(--body-font);
 	color: var(--text-primary-color);
 	font-size: var(--body-font-size);
 }
@@ -13,10 +13,5 @@ body {
 h1,
 h2,
 h3 {
-	/* font-family: var(--decorative-font); */
-}
-
-p {
-	/* font-family: var(--body-font); */
-	font-family: 'Open Sans', sans-serif;
+	font-family: var(--decorative-font);
 }
